--- a/package.json
+++ b/package.json
@@ -6,16 +6,13 @@
     "dev": "next dev --turbo",
     "build": "tsx lib/db/migrate && next build && drizzle-kit generate",
     "start": "next start",
-    "lint": "npx ultracite@latest check",
-    "format": "npx ultracite@latest fix",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "npx tsx lib/db/migrate.ts",
     "db:studio": "drizzle-kit studio",
     "db:push": "drizzle-kit push",
     "db:pull": "drizzle-kit pull",
     "db:check": "drizzle-kit check",
-    "db:up": "drizzle-kit up",
-    "test": "export PLAYWRIGHT=True && pnpm exec playwright test"
+    "db:up": "drizzle-kit up"
   },
   "dependencies": {
     "@ai-sdk/gateway": "^1.0.15",
@@ -95,10 +92,8 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.2.2",
     "@opentelemetry/instrumentation": "^0.207.0",
     "@opentelemetry/sdk-logs": "^0.207.0",
-    "@playwright/test": "^1.50.1",
     "@tailwindcss/postcss": "^4.1.13",
     "@tailwindcss/typography": "^0.5.15",
     "@types/d3-scale": "^4.0.8",
@@ -112,8 +107,7 @@
     "postcss": "^8",
     "tailwindcss": "^4.1.13",
     "tsx": "^4.19.1",
-    "typescript": "^5.6.3",
-    "ultracite": "5.3.9"
+    "typescript": "^5.6.3"
   },
   "packageManager": "pnpm@9.12.3",
   "peerDependencies": {
