--- a/package.json
+++ b/package.json
@@ -15,11 +15,9 @@
     "db:up": "drizzle-kit up"
   },
   "dependencies": {
-    "@ai-sdk/gateway": "^1.0.15",
     "@ai-sdk/google": "^2.0.25",
     "@ai-sdk/provider": "2.0.0",
     "@ai-sdk/react": "2.0.26",
-    "@ai-sdk/xai": "2.0.13",
     "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/lang-python": "^6.1.6",
     "@codemirror/state": "^6.5.0",
@@ -34,10 +32,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@radix-ui/react-visually-hidden": "^1.1.0",
-    "@vercel/analytics": "^1.3.1",
-    "@vercel/blob": "^0.24.1",
     "@vercel/functions": "^2.0.0",
-    "@vercel/otel": "^1.12.0",
     "@vercel/postgres": "^0.10.0",
     "ai": "5.0.26",
     "bcrypt-ts": "^5.0.2",
@@ -92,8 +87,6 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@opentelemetry/instrumentation": "^0.207.0",
-    "@opentelemetry/sdk-logs": "^0.207.0",
     "@tailwindcss/postcss": "^4.1.13",
     "@tailwindcss/typography": "^0.5.15",
     "@types/d3-scale": "^4.0.8",
@@ -109,9 +102,5 @@
     "tsx": "^4.19.1",
     "typescript": "^5.6.3"
   },
-  "packageManager": "pnpm@9.12.3",
-  "peerDependencies": {
-    "@opentelemetry/instrumentation": "^0.207.0",
-    "@opentelemetry/sdk-logs": "^0.207.0"
-  }
+  "packageManager": "pnpm@9.12.3"
 }
