updated the langing page and overall ui with contact and about us

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,6 @@ POSTGRES_URL=****
 # Instructions to create a Redis store here:
 # https://vercel.com/docs/redis
 REDIS_URL=****
+
+NEXT_PUBLIC_GUEST_MESSAGE_LIMIT=
+NEXT_PUBLIC_FREE_MESSAGE_LIMIT=
