--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "framer-motion": "^11.3.19",
     "geist": "^1.3.1",
     "lucide-react": "^0.446.0",
+    "motion": "^12.23.25",
     "nanoid": "^5.0.8",
     "next": "15.3.0-canary.31",
     "next-auth": "5.0.0-beta.25",
