--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "fast-deep-equal": "^3.1.3",
     "framer-motion": "^11.3.19",
     "geist": "^1.3.1",
+    "imagekit": "^6.0.0",
+    "imagekitio-next": "^1.0.1",
     "lucide-react": "^0.446.0",
     "motion": "^12.23.25",
     "nanoid": "^5.0.8",
